AF-1011-01 Add firebase 2

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,17 +1,5 @@
 {
   "projects": {
-    "default": "aloha-flora",
-    "y": "aloha-flora",
-    "aloha-flora": "aloha-flora"
-  },
-  "targets": {
-    "aloha-5f01b": {
-      "hosting": {
-        "aloha01": [
-          "aloha-5f01b"
-        ]
-      }
-    }
-  },
-  "etags": {}
+    "default": "aloha-flora"
+  }
 }
